--- a/programming-type-theory.cabal
+++ b/programming-type-theory.cabal
@@ -27,10 +27,10 @@ executable programming-type-theory
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules: Grammar
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
+    build-depends:    base ^>=4.14.3.0, containers
     hs-source-dirs:   app
     default-language: Haskell2010
