--- a/programming-type-theory.cabal
+++ b/programming-type-theory.cabal
@@ -27,7 +27,7 @@ executable programming-type-theory
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Grammar, FreeVar, Print
+    other-modules: Grammar, FreeVar, Print, Substitute
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
