--- a/programming-type-theory.cabal
+++ b/programming-type-theory.cabal
@@ -27,7 +27,8 @@ executable programming-type-theory
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Grammar, FreeVar, Print, Substitute, TypeCheck, SetTheory, Util
+    other-modules: Grammar, FreeVar, Print, Substitute, TypeCheck, SetTheory,
+        Util, Identification
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
